# agenzic

./: .gitignore  LICENSE  PYPI_README.md  README.md  pyproject.toml
agenzic/: __main__.py  ai_client.py
agenzic/commands/: ask.py  codegen.py  codemetrics.py  commit.py  docgen.py  inception.py  inspect.py  projtree.py  review.py  summarize.py  tests.py  version.py
agenzic/commands/experimental/: docgen.py  graph.py  inception.py  myflow.py
agenzic/utils/: ai_client.py  helpers.py
