[project]
name = "agenzic"
version = "0.1.0"
description = "AI-powered CLI assistant for developers: commits, summaries, PR reviews, docs."
readme = "README.md"
authors = [{name = "Ratul Dash"}]
license = {text = ""}
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.31.0",
    "typer>=0.19.1",
]

[project.scripts]
agenzic = "agenzic.__main__:main"
