[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agenzic"
version = "0.1.0"
description = "AI-powered CLI assistant for developers: commits, summaries, PR reviews, docs."
readme = "README.md"
authors = [
  { name = "Ratul Dash" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.31.0",
    "typer>=0.9.0",
]

keywords = ["ai", "cli", "developer-tools", "commit", "review", "summarize", "docs", "tests"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.scripts]
agenzic = "agenzic.__main__:main"
